--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,7 @@ dependencies {
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     testImplementation "org.robolectric:robolectric:4.8"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
 
     // InstantTaskExecutorRule
